# ros2_usb_serial

./: README.md
ros2_usb_serial/: dados_esp32.txt  package.xml  setup.cfg  setup.py
ros2_usb_serial/ros2_usb_serial/: dados_esp32.txt  usb_serial.py  usb_serial_save_txt.py
