<?xml version="1.0"?>
<package format="3">
  <name>ros2_usb_serial</name>
  <version>0.0.1</version>
  <description>Pacote que comunica microcontroladores via USB serial para ROS 2</description>
  <maintainer email="tiagocostagameiro@gmail.com">Gameiro</maintainer>
  <license>MIT</license>

  <!-- Dependências necessárias -->
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
